fixed the banner button on mobile

--- a/hw3/styles-mobile.css
+++ b/hw3/styles-mobile.css
@@ -38,6 +38,7 @@
 
 .banner__content {
 	width: 70%;
+	min-height: auto;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: justify;
@@ -47,6 +48,11 @@
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.banner__button {
+	position: relative;
+	margin-top: 60px;
 }
 
 .email {
