--- a/hw3/styles3.css
+++ b/hw3/styles3.css
@@ -1,5 +1,6 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
+	box-sizing: border-box;	
 }
 
 input:focus,
@@ -42,7 +43,7 @@ button:focus {
 .navbar__logo {
 	display: inline-block;
 	width: 20%;
-	box-sizing: border-box;
+/*	box-sizing: border-box;*/
 }
 
 .navbar__menu-toggle {
@@ -57,7 +58,7 @@ button:focus {
 	padding-left: 0;
 	float: right;
 	width: 50%;
-	box-sizing: border-box;	
+/*	box-sizing: border-box;	*/
 	display: flex;
 		display: -webkit-box; 
 		display: -moz-box; 
@@ -233,7 +234,7 @@ button:focus {
 .email__button, .footer__button {
 	width: 80px;
 	height: 45px;
-	box-sizing: border-box;
+/*	box-sizing: border-box;*/
 	line-height: 30px;
 	color: #fff;	
 	padding: 0 10px;
